@@ -1,7 +1,7 @@
 ###############################################################################
 # PRINTER.CFG - SAMPLE CONFIG FILE FOR MONITORING A NETWORK PRINTER
 #
-# Last Modified: 07-17-2007
+# Last Modified: 10-03-2007
 #
 # NOTES: This config file assumes that you are using the sample configuration
 #	 files that get installed with the Nagios quickstart guide.
@@ -27,7 +27,7 @@ define host{
 	host_name	hplj2605dn		; The name we're giving to this printer
 	alias		HP LaserJet 2605dn	; A longer name associated with the printer
 	address		192.168.1.30		; IP address of the printer
-	hostgroups	allhosts,network-printers ; Host groups this printer is associated with
+	hostgroups	network-printers 	; Host groups this printer is associated with
 	}
 
 
